public/index.css
figure {
  margin-top: 40px;
  margin-bottom: 50px;
}



.positive-text {
  color: #ca0020;
  font-weight: bold;
}
.negative-text {
  color: #0571b0;
  font-weight: bold;
}

/* ****************************************
 * Template Changes
 ******************************************/

@media (min-width: 768px) {
  d-title h1 {
    font-size: 40px !important;
  }
}

/* ****************************************
 * Arguments figure
 ******************************************/

.arguments-figure {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: space-around;
}
.arguments-figure > div {
  max-width: 700px;
  margin-bottom: 20px;
  margin-left: 0px;
  margin-right: 0px;
  display: flex;
  align-items: flex-start;
}
.arguments-figure > div:last-child {
  margin-bottom: 0px;
}
.arguments-figure div img {
  flex-basis: 120px;
  max-width: 120px;
  border-radius: 8px;
  margin-right: 30px;
  flex-shrink: 4;
}
.arguments-figure div div {
  flex-basis: 550px;
  flex-shrink: 1;
}
.arguments-figure div h4 {
  margin-top: -4px;
  margin-bottom: 8px;
}



/* ****************************************
 * curve-figure; curve-orientations-figure
 ******************************************/

.curve-figure {
  display: flex;
  flex-direction: row;
}
.curve-figure div:first-child  {
  margin-right: 60px;
}

.curve-figure div {
  flex-basis: 50%;
  flex-grow: 1;
  flex-shrink: 1;
}

.curve-oreientaions-figure {
  display: flex;
  flex-direction: row;
}
.curve-oreientaions-figure > div:first-child  {
  flex-basis: 45%;
  flex-grow: 1;
}

.curve-oreientaions-figure div:last-child {
  flex-basis: 44.8%;
  flex-grow: 1;
}




/* ****************************************
 * Claims Figures
 ******************************************/

@media (min-width: 600px){
  .claim-figure h4 {
    --border-bottom: 1px solid #CCC;
  }
  .claim-figure > div > div {
    margin-left: 40px;
  }
}
@media (max-width: 600px){
  .claim-figure img {
    display: none;
  }
  .claim-figure > div {
    margin-top: 20px;
    margin-bottom: 20px;
    border-left: 1px solid #CCC;
  }
  .claim-figure > div > div {
    margin-left: 20px;
  }

  .claim-figure .big-only {
    display: none;
  }
}

.claim-figure img {
  max-width: 220px;
  border-radius: 2px;
}
.claim-figure {
  --font-style: italic;
}
.claim-figure > div {
  display: flex;
  flex-direciton: row;
}
.claim-figure > div > div {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  max-width: 550px;
}
.claim-figure h4 {
  margin-top: 0px;
  margin-bottom: 15px;
  flex-grow: 2;
  font-size: 100%;
}
.claim-figure .claim {
  margin-top: 5px;
  margin-bottom: 5px;
  flex-grow: 1;
}
.claim-figure .claim .claim-header {
  font-weight: bold;
  font-size: 90%;
}
h2 {
  border-bottom: none !important;
}





/* ****************************************
 * TOC
 ******************************************/
    @media(max-width: 1000px){
      d-contents {
        justify-self: start;
        align-self: start;
        grid-column-start: 2;
        grid-column-end: 6;
        padding-bottom: 0.5em;
        margin-bottom: 1em;
        padding-left: 0.25em;
        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
        border-bottom-width: 1px;
        border-bottom-style: solid;
        border-bottom-color: rgba(0, 0, 0, 0.1);
      }
    }
    d-contents a:hover {
      border-bottom: none;
    }

    @media (min-width: 1000px){
      d-contents {
        align-self: start;
        grid-column-start: 1 !important;
        grid-column-end: 4 !important;
        justify-self: end;
        margin-top:  2em;
        padding-right: 3em;
        padding-left: 2em;
        border-right: 1px solid rgba(0, 0, 0, 0.1);
        border-right-width: 1px;
        border-right-style: solid;
        border-right-color: rgba(0, 0, 0, 0.1);
      }
    }

    d-contents nav h3 {
      margin-top: 0;
      margin-bottom: 1em;
    }

    d-contents nav div {
      color: rgba(0, 0, 0, 0.8);
      font-weight: bold;
    }

    d-contents nav a {
      color: rgba(0, 0, 0, 0.8);
      border-bottom: none;
      text-decoration: none;
    }

    d-contents li {
      list-style-type: none;
    }

    d-contents ul {
      padding-left: 1em;
    }

    d-contents nav ul li {
      margin-bottom: .25em;
    }

    d-contents nav a:hover {
      text-decoration: underline solid rgba(0, 0, 0, 0.6);
    }

    d-contents nav ul {
      margin-top: 0;
      margin-bottom: 6px;
    }


    d-contents nav>div {
      display: block;
      outline: none;
      margin-bottom: 0.5em;
    }

    d-contents nav>div>a {
      font-size: 13px;
      font-weight: 600;
    }





  /* ****************************************
   * Thread Info
   ******************************************/

    .thread-info {
        background-color: hsl(54, 78%, 96%);
        border-left: solid hsl(54, 33%, 67%) 1px;
        padding: 1em;
        color: hsla(0, 0%, 0%, 0.67);
    }

    #thread-nav {
        margin-top: 0;
        margin-bottom: 1.5rem;
        display: grid;
        grid-template-columns: 65px 1fr 1fr;
        grid-template-areas:
            "icon explanation explanation "
            "icon prev next";
        grid-column-gap: 1.5em;
    }

    #thread-nav .icon-multiple-pages {
        grid-area: icon;
        padding: 0.5em;
        content: url(images/multiple-pages.svg);
    }

    #thread-nav .explanation {
        grid-area: explanation;
        font-size: 85%;
        color: hsl(0, 0%, 0.33);
    }

    #thread-nav .prev {
        grid-area: prev;
    }

    #thread-nav .prev::before {
        content: "← Previous Article";
    }

    #thread-nav .overview {
        scroll-behavior: smooth;
    }

    #thread-nav .overview::before {
        content: "↑";
        margin-right: 0.5em;
    }

    #thread-nav .next {
        grid-area: next;
        scroll-behavior: smooth;
    }

    #thread-nav .next::before {
        content: "Next Article →";
    }

    #thread-nav .next::before, #thread-nav .prev::before {
      display: block;
      font-size: 80%;
      font-weight: bold;
      margin-top: 0px;
      margin-right: 0.5em;
      text-transform: uppercase;
      margin-bottom: -8px;
    }



    #thread-nav .prev,
    #thread-nav .next,
    #thread-nav .overview {
        font-size: 80%;
        font-weight: 600;
        border-bottom: none;
        color: #2e6db7;
        margin-top: 0.25em;
        letter-spacing: 0.25px;
    }

